--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.15.2"
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.15.2",
+    "tailwindcss": "^3.4.10"
+  },
+  "devDependencies": {
+    "daisyui": "^4.12.10"
   }
 }
