--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.15.2",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.5.4",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
